--- a/templates/_shared/layout.html
+++ b/templates/_shared/layout.html
@@ -20,7 +20,7 @@
 
 <footer>
     <div class="copyright">
-        This is a fake site built during a course.
+        This is a demo site.
     </div>
     <div>
         Check out the <a href="/admin">admin</a> section.
